Upgrade reflectutils to jdk 11+ (#2)